--- a/collections/requirements.yaml
+++ b/collections/requirements.yaml
@@ -1,9 +1,18 @@
+---
 collections:
   - name: ansible.posix
     source: https://galaxy.ansible.com
+  - name: ansible.utils
+    source: https://galaxy.ansible.com
+  - name: ansible.windows
+    source: https://galaxy.ansible.com
   - name: community.general
+    source: https://galaxy.ansible.com
+  - name: community.windows
     source: https://galaxy.ansible.com
   - name: kubernetes.core
     source: https://galaxy.ansible.com
   - name: kubevirt.core
+    source: https://galaxy.ansible.com
+  - name: microsoft.ad
     source: https://galaxy.ansible.com
