--- a/roles/winvm/defaults/main.yaml
+++ b/roles/winvm/defaults/main.yaml
@@ -1,4 +1,2 @@
 ---
-vm_dns_domain: lab.uc2.io
-vm_interface_name: Ethernet Instance 0
-vm_namespace: windows-virtual-machines
+winvm_wait_for_ip: false
